# Qube-Loader

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  cube_mod.ini.sample  run.bat  run.sh
cmake/: toolchain-i686-mingw.cmake
example_lib/: CMakeLists.txt
example_lib/include/: example_lib_api.h
example_lib/src/: example_lib.cpp
example_mod/: CMakeLists.txt
example_mod/include/: README.md  mod_context.h  overlay.h
example_mod/include/features/: cheats.h  game_events.h  game_hooks.h  health_history.h  locale_demo.h  memory_probe.h  services_demo.h
example_mod/include/menu/: menu.h  tab.h
example_mod/include/menu/tabs/: combat_tab.h  entities_tab.h  events_tab.h  hero_tab.h  hooks_tab.h  items_tab.h  mod_tab.h  session_tab.h  view_tab.h  world_tab.h
example_mod/lang/: de.ini  en.ini
example_mod/src/: example_mod.cpp  overlay.cpp
example_mod/src/features/: cheats.cpp  game_events.cpp  game_hooks.cpp  health_history.cpp  locale_demo.cpp  memory_probe.cpp  services_demo.cpp
example_mod/src/menu/: menu.cpp  tab.cpp
example_mod/src/menu/tabs/: combat_tab.cpp  entities_tab.cpp  events_tab.cpp  hero_tab.cpp  hooks_tab.cpp  items_tab.cpp  mod_tab.cpp  session_tab.cpp  view_tab.cpp  world_tab.cpp
modloader/: CMakeLists.txt
modloader/include/: README.md
modloader/injector/: inject.cpp
modloader/sdk/: cube_mod.hpp  cube_sdk.h
modloader/sdk/cube/: common.hpp  entity.hpp  events.hpp  hero.hpp  hookcall.hpp  items.hpp  locale.hpp  logger.hpp  mod.hpp  pet.hpp  selection.hpp  services.hpp  session.hpp  view.hpp  world.hpp
modloader/sdk/cube_sdk/: api.h  apis.h  core.h  enums.h  events_hooks.h  types.h
modloader/src/: dllmain.cpp
modloader/src/api/: api.cpp  api.h  assets.cpp  bridge.h  catalog.cpp  combat.cpp  context.h  entities.cpp  hooks.cpp  input.cpp  items.cpp  locale.cpp  pet.cpp  pickup.cpp  player.cpp  selection.cpp  services.cpp  session.cpp  status.cpp  system.cpp  view.cpp  world.cpp
modloader/src/core/: config.cpp  config.h  crash.cpp  crash.h  exception_name.h  faultguard.cpp  faultguard.h  iat.cpp  iat.h  log.cpp  log.h  mem.cpp  mem.h  paths.h
modloader/src/game/: assets.cpp  assets.h  attackwatch.cpp  attackwatch.h  audio.cpp  audio.h  capture_detour.h  catalog.cpp  catalog.h  combat.cpp  combat.h  creature.cpp  creature.h  diag.cpp  diag.h  entities.cpp  entities.h  framecache.cpp  framecache.h  game.cpp  game.h  gamecontroller.cpp  gamecontroller.h  gamelog.cpp  gamelog.h  items.cpp  items.h  offsets.h  pet.cpp  pet.h  pickup.cpp  pickup.h  player.cpp  player.h  selection.cpp  selection.h  session.cpp  session.h  status.cpp  status.h  (+4 more)
modloader/src/game/gamehooks/: gamehooks.h  hookbus.cpp  rawpool.cpp  rawpool.h
modloader/src/game/gamehooks/builtin/: builtin.h  crit.cpp  impact.cpp  maxhealth.cpp  registry.cpp
modloader/src/hooks/: d3d9_hook.cpp  d3d9_hook.h  detour.cpp  detour.h  dinput.cpp  dinput.h  input_block.cpp  input_block.h  render_dispatch.cpp  render_dispatch.h  window.cpp  window.h
modloader/src/modloader/: modloader.h
modloader/src/modloader/core/: conflict.cpp  conflict.h  deps.cpp  events.cpp  events.h  internal.h  lifecycle.cpp  loader.cpp  modlocale.cpp  modlocale.h  owner_name.h  registry.h  report.cpp  services.cpp  services.h  writeguard.cpp  writeguard.h
modloader/src/modloader/game/: gameevents.cpp  gameevents.h
modloader/src/util/: field.h  fmt.h  guard.h  inflight.cpp  inflight.h  math.h
